# adk_lab

./: .gitignore  README.md  __main__.py  agent.py  agent_v2.py  check_github_client.py  check_langchain_client.py  langchain_agent.py  pyproject.toml  requirements.txt  stack_exchange_call.py
adk_lab/: Dockerfile  __main__.py  check_github_client.py  check_langchain_client.py  check_langchain_client_rest_api.py  deploy.sh  gcs_bucket_upload.py  github_call.py  requirements.txt  requirements_cloudrun.txt  stack_exchange_call.py  temp.py
adk_lab/code_assistant/: agent.py
adk_lab/deployment/: deploy_ae.py
adk_lab/github_agent/: main.py
adk_lab/stackexchange_agent/: agent.py  agent_executor.py  main.py
adk_lab/tools/: __init__.py  bug_database.py  code_manual.py  gdrive_upload.py
adk_lab/utils/: proxy.py
github_agent/: main.py
stackexchange_agent/: agent_executor.py  main.py
tools/: __init__.py  bug_database.py  code_manual.py  error_storage.py
